@@ -48,8 +48,30 @@ def setup_reference_fmus():
 
             with ZipFile(zip_path, 'r') as zf:
                 for fobj in zf.filelist:
-                    # For now, only unpack FMI 3.0 FMUs
-                    if (fobj.filename.startswith('3.0') or fobj.filename.startswith('2.0')) and fobj.filename.endswith('.fmu'):
+                    if fobj.filename.startswith('3.0') and fobj.filename.endswith('.fmu'):
+                        zf.extract(fobj, zip_unzip_to)
+                        with open(md5_file, 'w') as f:
+                            f.write(md5)
+    # NOTE: FMI2 Feedthrough.fmu is broken in v0.0.39; use v0.0.38 for FMI2 instead
+    # Remove the code below with new reference FMU version
+    zip_file_url = "https://github.com/modelica/Reference-FMUs/releases/download/v0.0.38/Reference-FMUs-0.0.38.zip"
+    zip_file_name = 'reference_fmus.zip'
+    zip_unzip_to = files_directory / 'reference_fmus'
+    md5 = hashlib.md5(zip_file_url.encode("utf-8")).hexdigest()
+    md5_file = Path(zip_unzip_to) / 'metadata_0_0_38' # Expected file
+    use_already_existing = False
+    if md5_file.exists():
+        with open(md5_file, 'r') as f:
+            use_already_existing = md5 == f.read()
+
+    if not use_already_existing:
+        with TemporaryDirectory() as tmpdirname:
+            zip_path = Path(tmpdirname) / zip_file_name
+            download_url(zip_file_url, zip_path)
+
+            with ZipFile(zip_path, 'r') as zf:
+                for fobj in zf.filelist:
+                    if fobj.filename.startswith('2.0') and fobj.filename.endswith('.fmu'):
                         zf.extract(fobj, zip_unzip_to)
                         with open(md5_file, 'w') as f:
                             f.write(md5)
